TEST_PROGRAMS/VALID/prabhjot_sandhu/fact.min
# Compute factorial of a number n

var fact:int;
var i:int;
var n:int;

fact = 1;
i = 1;
read n;

while n do  #true if n is non-zero
  n = n - 1;
  fact = fact * i;
  i = i + 1;
done

print fact;

