TEST_PROGRAMS/INVALID/hongji_chen/invalidMissingENDIForDONE.min
#Missing endif or done

var a : int;

while a do 
	if a then
		a = a+1;
	done
endif
